# mlWalmart

./:  README.md  Dockerfile  README.md  conda.yaml  pyproject.toml  requirements.txt  setup.py
docker/anaconda/: Dockerfile
docker/mlflow/: Dockerfile
pipelines/: hola_mundo.py  init_kbf.py  pipeline_conda_yaml.yaml
reports/: data_profile.html
src/: conda.yaml  data.py  dcv.py  features.py  input_example.json  make.py  run.bash
